# athena-rs

./: .gitignore  AGENT.md  Cargo.toml  README.md
.cursor/rules/: agent-workflow.mdc
config/: athena.toml
docs/: CODE_REVIEW_REPORT.md  DESIGN.md  PERF.md  PROGRESS.md  REVIEW.md  SHARDING.md  TODO.md
src/: main.rs
src/circuit/: limiter.rs  mod.rs
src/config/: mod.rs  schema.rs
src/group/: manager.rs  mod.rs
src/health/: checker.rs  master.rs  mod.rs  registry.rs  state.rs
src/metrics/: mod.rs
src/parser/: aggregator.rs  analyzer.rs  mod.rs  rewriter.rs
src/pool/: connection.rs  manager.rs  mod.rs  stateless.rs  transaction.rs
src/protocol/: codec.rs  command.rs  handshake.rs  mod.rs  packet.rs
src/router/: mod.rs  rule.rs  rw_split.rs  selector.rs  shard.rs
src/session/: mod.rs  state.rs
tests/: crud_test.sql
tests/integration/: limiter.rs  main.rs  rw_split.rs  sharding.rs  transaction.rs
